--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,12 +44,19 @@
     <Compile Include="BaseModel\AggregateRoot.cs" />
     <Compile Include="BaseModel\IAggregateRoot.cs" />
     <Compile Include="BaseModel\IEntity.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="CoreModels\User.cs" />
     <Compile Include="CoreModels\UserEnterpriseInfo.cs" />
     <Compile Include="CoreModels\UserJournalResult.cs" />
     <Compile Include="CoreModels\UserPersonalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryInterface\IRepository.cs" />
+    <Compile Include="RepositoryInterface\IRepositoryContext.cs" />
+    <Compile Include="RepositoryInterface\IUnitOfWork.cs" />
+    <Compile Include="RepositoryInterface\PagedResult.cs" />
+    <Compile Include="RepositoryInterface\SortOrder.cs" />
+    <Compile Include="Specifications\ExpressionSpecification.cs" />
+    <Compile Include="Specifications\ISpecification.cs" />
+    <Compile Include="Specifications\Specification.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
