--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Mapping\UserPersonalInfoMap.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortByExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
